RESOLVED FIXED290990
Fix corner case in BBQJIT LRU usage
https://bugs.webkit.org/show_bug.cgi?id=290990
Summary Fix corner case in BBQJIT LRU usage
Angelos Oikonomopoulos
Reported 2025-04-03 05:30:31 PDT
BBQJIT::increaseKey post-increments m_lastUseTimestamp, which means that it assigns 0 as the key for the first use, essentially not counting the use.
Attachments
Angelos Oikonomopoulos
Comment 1 2025-04-03 05:38:39 PDT
EWS
Comment 2 2025-04-04 01:14:29 PDT
Committed 293224@main (2f82f9ba3196): <https://commits.webkit.org/293224@main> Reviewed commits have been landed. Closing PR #43535 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-04-04 01:15:18 PDT
Note You need to log in before you can comment on or make changes to this bug.