Fix corner case in BBQJIT LRU usage https://bugs.webkit.org/show_bug.cgi?id=290990

Reviewed by Yusuke Suzuki.

BBQJIT::increaseKey post-increments m_lastUseTimestamp (which starts out
as zero), so for the first even use, it sets the use timestamp to zero.
Since we initialize timestamps to zero, this ends up discarding the use.

This fixes a couple of wasm-bbq-no-consts test failures on 32-bits,
where the first even use was in an instruction that needed to load both
operands. Since the first use wasn't counted, we ended up picking the
same register for loading both operands.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::increaseKey):

Canonical link: https://commits.webkit.org/293224@main